--- a/src/@lekoarts/gatsby-theme-cara/sections/projects.mdx
+++ b/src/@lekoarts/gatsby-theme-cara/sections/projects.mdx
@@ -1,9 +1,12 @@
+import ProjectCard from "../components/project-card";
+
 ## Projects
 
 <ProjectCard
   title="Movies Catalogue App"
   link="https://movie-catalogue-app-two.vercel.app/"
-  bg="linear-gradient(to right, #D4145A 0%, #FBB03B 100%)"
+  bg="linear-gradient(to right, #662D8C 0%, #ED1E79 100%)"
+  cover="/movies-catalogue.png"
 >
    Application that displays popular movies from themoviedb.org API with pagination, applicable filters and a
 movie details page.
@@ -12,7 +15,8 @@ movie details page.
 <ProjectCard
   title="Online Store App"
   link="https://generic-store-app.netlify.app/"
-  bg="linear-gradient(to right, #662D8C 0%, #ED1E79 100%)"
+  bg="linear-gradient(to right, #D4145A 0%, #FBB03B 100%)"
+  cover="/store-app.png"
 >
   Application that simulates a real online store, consuming a public API for products information.
 </ProjectCard>
@@ -20,6 +24,7 @@ movie details page.
   title="CEMED-VG"
   link="https://stupendous-marshmallow-aacc2b.netlify.app/"
   bg="linear-gradient(to right, #009245 0%, #FCEE21 100%)"
+  cover="/cemed.png"
 >
   CEMED-VG is the largest medical clinic in the city of Várzea Grande/MT. With several medical specialties, it takes care of thousands of pacients every month.
 </ProjectCard>
@@ -27,6 +32,7 @@ movie details page.
   title="Pomodoro Timer"
   link="https://www.lekoarts.de/design/introducing-the-theme-ui-plugin-for-figma?utm_source=cara&utm_medium=Theme"
   bg="linear-gradient(to right, #D585FF 0%, #00FFEE 100%)"
+  cover="/pomodoro.png"
 >
   Timer app that uses the Pomodoro technique. With history, interrupt and continue functionalities, to carry on projects in the future.
 </ProjectCard>
