--- a/src/@lekoarts/gatsby-theme-cara/sections/contact.mdx
+++ b/src/@lekoarts/gatsby-theme-cara/sections/contact.mdx
@@ -1,3 +1,3 @@
-## Get in touch
+# Get in touch
 
-Visit [my github](https://github.com/fanoromani) or find me on [LinkedIn](https://www.linkedin.com/in/stefano-romani-684331257/)
+#### Visit [my github](https://github.com/fanoromani) or find me on [LinkedIn](https://www.linkedin.com/in/stefano-romani-684331257/)
