--- a/src/@lekoarts/gatsby-theme-cara/sections/about.mdx
+++ b/src/@lekoarts/gatsby-theme-cara/sections/about.mdx
@@ -6,8 +6,8 @@
     alignItems: "center",
     gap: "2rem",
     fontWeight: "bold",
-    marginTop: "4rem",
-    marginBottom: "2rem",
+    paddingTop: "4rem",
+    paddingBottom: "2rem",
   }}
 >
 <img src="/avatar.png" alt="avatar" style={{ borderRadius: "100%" }} />
