--- a/src/@lekoarts/gatsby-theme-cara/sections/about.mdx
+++ b/src/@lekoarts/gatsby-theme-cara/sections/about.mdx
@@ -1,23 +1,9 @@
+import AboutDesc from "../components/about-desc.tsx";
+
 ## About
 
-<div id='about'
-  style={{
-    display: "flex",
-    alignItems: "center",
-    gap: "2rem",
-    fontWeight: "bold",
-    paddingTop: "4rem",
-    paddingBottom: "2rem",
-  }}
->
-<img src="/avatar.png" alt="avatar" style={{ borderRadius: "100%" }} />
+<AboutDesc />
 
-> The English language can not fully capture the depth and complexity of my
-> thoughts. So I'm incorporating Emoji into my speech to better express myself.
-> Winky face.
-
-</div
->
 You know the way you feel when you see a picture of two otters holding hands? That's how you're gonna feel every day.
 My mother cried the day I was born because she knew she’d never be prettier than me. You should make me your campaign
 manager. I was born for politics. I have great hair and I love lying. Captain? The kids want to know where
