--- a/src/@lekoarts/gatsby-theme-cara/sections/projects.mdx
+++ b/src/@lekoarts/gatsby-theme-cara/sections/projects.mdx
@@ -1,4 +1,4 @@
-import ProjectCard from "../components/project-card";
+import ProjectsComponent from "../components/projects-component.tsx";
 
 ## Projects
 
@@ -8,9 +8,8 @@ import ProjectCard from "../components/project-card";
   bg="linear-gradient(to right, #662D8C 0%, #ED1E79 100%)"
   cover="/movies-catalogue.png"
 >
-   Application that displays popular movies from themoviedb.org API with pagination, applicable filters and a
-movie details page.
-
+  Application that displays popular movies from themoviedb.org API with
+  pagination, applicable filters and a movie details page.
 </ProjectCard>
 <ProjectCard
   title="Online Store App"
@@ -18,7 +17,8 @@ movie details page.
   bg="linear-gradient(to right, #D4145A 0%, #FBB03B 100%)"
   cover="/store-app.png"
 >
-  Application that simulates a real online store, consuming a public API for products information.
+  Application that simulates a real online store, consuming a public API for
+  products information.
 </ProjectCard>
 <ProjectCard
   title="CEMED-VG"
@@ -26,7 +26,9 @@ movie details page.
   bg="linear-gradient(to right, #009245 0%, #FCEE21 100%)"
   cover="/cemed.png"
 >
-  CEMED-VG is the largest medical clinic in the city of Várzea Grande/MT. With several medical specialties, it takes care of thousands of pacients every month.
+  CEMED-VG is the largest medical clinic in the city of Várzea Grande/MT. With
+  several medical specialties, it takes care of thousands of pacients every
+  month.
 </ProjectCard>
 <ProjectCard
   title="Pomodoro Timer"
@@ -34,5 +36,6 @@ movie details page.
   bg="linear-gradient(to right, #D585FF 0%, #00FFEE 100%)"
   cover="/pomodoro.png"
 >
-  Timer app that uses the Pomodoro technique. With history, interrupt and continue functionalities, to carry on projects in the future.
+  Timer app that uses the Pomodoro technique. With history, interrupt and
+  continue functionalities, to carry on projects in the future.
 </ProjectCard>
