--- a/src/@lekoarts/gatsby-theme-cara/sections/intro.mdx
+++ b/src/@lekoarts/gatsby-theme-cara/sections/intro.mdx
@@ -2,4 +2,4 @@
 
 # I'm Stefano
 
-Frontend Developer living in Brasília, Brazil.
+I create web applications, focusing mainly on React and its surroundings technologies. I also have a background as a game designer.
