responsive iphone xr adjustment

--- a/src/@lekoarts/gatsby-theme-cara/sections/projects.mdx
+++ b/src/@lekoarts/gatsby-theme-cara/sections/projects.mdx
@@ -30,7 +30,7 @@
 </ProjectCard>
 <ProjectCard
   title="Pomodoro Timer"
-  link="https://www.lekoarts.de/design/introducing-the-theme-ui-plugin-for-figma?utm_source=cara&utm_medium=Theme"
+  link="#"
   bg="linear-gradient(to right, #D585FF 0%, #00FFEE 100%)"
   cover="/pomodoro.png"
 >
