--- a/src/@lekoarts/gatsby-theme-cara/sections/projects.mdx
+++ b/src/@lekoarts/gatsby-theme-cara/sections/projects.mdx
@@ -37,3 +37,8 @@
   Timer app that uses the Pomodoro technique. With history, interrupt and
   continue functionalities, to carry on projects in the future.
 </ProjectCard>
+
+<p>
+  Be sure to check my [GitHub](https://github.com/fanoromani) for all my
+  projects and details.
+</p>
