--- a/src/@lekoarts/gatsby-theme-cara/sections/projects.mdx
+++ b/src/@lekoarts/gatsby-theme-cara/sections/projects.mdx
@@ -38,7 +38,4 @@
   continue functionalities, to carry on projects in the future.
 </ProjectCard>
 
-<p>
-  Be sure to check my [GitHub](https://github.com/fanoromani) for all my
-  projects and details.
-</p>
+Be sure to check my [GitHub](https://github.com/fanoromani) for all my projects and details.
