--- a/src/@lekoarts/gatsby-theme-cara/sections/projects.mdx
+++ b/src/@lekoarts/gatsby-theme-cara/sections/projects.mdx
@@ -38,4 +38,15 @@
   continue functionalities, to carry on projects in the future.
 </ProjectCard>
 
+<ProjectCard
+  title="Multiplayer Web App"
+  link="https://madjam.vercel.app/"
+  bg="linear-gradient(to right, #D585FF 0%, #00FFEE 100%)"
+  cover="/pomodoro.png"
+>
+  Web app made with friends during the MadJam Game Jam in 48h with multiplayer
+  features using web tools, ending up getting 3rd place for coding and stack
+  originality
+</ProjectCard>
+
 Be sure to check my [GitHub](https://github.com/fanoromani) for all my projects and details.
