--- a/src/@lekoarts/gatsby-theme-cara/sections/projects.mdx
+++ b/src/@lekoarts/gatsby-theme-cara/sections/projects.mdx
@@ -30,7 +30,7 @@
 </ProjectCard>
 <ProjectCard
   title="Pomodoro Timer"
-  link="#"
+  link="https://fano-pomodoro.netlify.app/"
   bg="linear-gradient(to right, #D585FF 0%, #00FFEE 100%)"
   cover="/pomodoro.png"
 >
@@ -41,8 +41,8 @@
 <ProjectCard
   title="Multiplayer Web App"
   link="https://madjam.vercel.app/"
-  bg="linear-gradient(to right, #D585FF 0%, #00FFEE 100%)"
-  cover="/pomodoro.png"
+  bg="linear-gradient(to right, #3bdaff 0%, #ffc410 100%)"
+  cover="/madjam.png"
 >
   Web app made with friends during the MadJam Game Jam in 48h with multiplayer
   features using web tools, ending up getting 3rd place for coding and stack
