--- a/src/@lekoarts/gatsby-theme-cara/sections/projects.mdx
+++ b/src/@lekoarts/gatsby-theme-cara/sections/projects.mdx
@@ -49,4 +49,14 @@
   originality
 </ProjectCard>
 
+<ProjectCard
+  title="Weather Forecast App"
+  link="https://fano-forecast.netlify.app/"
+  bg="linear-gradient(to right, #03fc4e 0%, #9e39f7 100%)"
+  cover="/forecast.png"
+>
+  Weather forecast app that uses a public API and shows climate details of
+  cities around the world.
+</ProjectCard>
+
 Be sure to check my [GitHub](https://github.com/fanoromani) for all my projects and details.
