--- a/src/@lekoarts/gatsby-theme-cara/sections/projects.mdx
+++ b/src/@lekoarts/gatsby-theme-cara/sections/projects.mdx
@@ -24,7 +24,7 @@
 <ProjectCard
   title="Multiplayer Web App"
   link="https://madjam.vercel.app/"
-  bg="linear-gradient(to right, #3bdaff 0%, #ffc410 100%)"
+  bg="linear-gradient(to right, #ed4f3e 0%, #ffc410 100%)"
   cover="/madjam.png"
 >
   Web app made with friends during the MadJam Game Jam in 48h with multiplayer
@@ -33,13 +33,33 @@
 </ProjectCard>
 
 <ProjectCard
+  title="Online Store App"
+  link="https://generic-store-app.netlify.app/"
+  bg="linear-gradient(to right, #D4145A 0%, #FBB03B 100%)"
+  cover="/store-app.png"
+>
+  Application that simulates a real online store, consuming a public API for
+  products information.
+</ProjectCard>
+
+<ProjectCard
   title="Weather Forecast App"
   link="https://fano-forecast.netlify.app/"
-  bg="linear-gradient(to right, #03fc4e 0%, #9e39f7 100%)"
+  bg="linear-gradient(to right, #33b88c 0%, #33adb8 100%)"
   cover="/forecast.png"
 >
   Weather forecast app that uses a public API and shows climate details of
   cities around the world.
 </ProjectCard>
 
-Be sure to check my [GitHub](https://github.com/fanoromani) for all my projects and details.
+<ProjectCard
+  title="Pomodoro Timer"
+  link="https://fano-pomodoro.netlify.app/"
+  bg="linear-gradient(to right, #D585FF 0%, #00FFEE 100%)"
+  cover="/pomodoro.png"
+>
+  Timer app that uses the Pomodoro technique. With history, interrupt and
+  continue functionalities, to carry on projects in the future.
+</ProjectCard>
+
+Be sure to check my [GitHub](https://github.com/fanoromani) for all my projects and details!
